# Payroll-Indonesia

./: MANIFEST.in  README.md  modules.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-ci.yml
payroll_indonesia/: __init__.py  api.py  app.py  constants.py  hooks.py  install.py  patches.txt  utils.py
payroll_indonesia/config/: defaults.json  desktop.py  docs.py  gl_account_mapper.py
payroll_indonesia/doctype/bpjs_payment_summary/: payment_hooks.py
payroll_indonesia/fixtures/: __init__.py  after_migrate.py  client_script.json  custom_fields.json  property_setter.json  salary_component.json  salary_structure.json  setup.py  supplier.json  workspace.json
payroll_indonesia/hooks/: before_fixtures.py
payroll_indonesia/override/: __init__.py  auth_hooks.py  employee.py  payroll_entry.py  payroll_entry_functions.py  salary_slip.py  salary_slip_functions.py  salary_structure.py
payroll_indonesia/override/salary_slip/: __init__.py  base.py  bpjs_calculator.py  bpjs_summary_creator.py  controller.py  gl_entry_override.py  tax_calculator.py  tax_summary_creator.py  ter_calculator.py  ter_table_creator.py
payroll_indonesia/patches/: fix_company_field_validation.py
payroll_indonesia/payroll_indonesia/: account_hooks.py  utils.py  validations.py
payroll_indonesia/public/js/: employee.js  (+2 more)
payroll_indonesia/utilities/: batch_processing.py  boot_override.py  cache_utils.py  change_log.py  fix_doctype_structure.py  maintenance.py  salary_slip_validator.py  tax_slab.py
payroll_indonesia/utillities/: maintenance.py  tax_slab.py
(+87 files in other folders)
