[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payroll_indonesia"
version = "0.0.1"
description = "Payroll module for Indonesian companies with local regulatory features"
authors = [
    {name = "PT. Innovasi Terbaik Bangsa", email = "danny.a.pratama@cao-group.co.id"}
]
requires-python = ">=3.10"